@startuml cow_fence_class

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor White
    BorderColor Black
    HeaderBackgroundColor SteelBlue
    HeaderFontColor White
    FontSize 12
    AttributeFontSize 11
}
skinparam enum {
    BackgroundColor LightYellow
    BorderColor DarkGoldenRod
}
skinparam ArrowColor DarkSlateGray

' ──────────────────────────────────────────────
' Enums y tipos
' ──────────────────────────────────────────────
enum zone_t << (E,LightYellow) >> {
    GREEN_ZONE       = 0x00
    LIGHT_BLUE_ZONE  = 0x01
    BLUE_ZONE        = 0x02
    DARK_BLUE_ZONE   = 0x03
    YELLOW_ZONE      = 0x04
    RED_ZONE         = 0x05
    BLACK_ZONE       = 0x06
}

enum CowState << (E,LightYellow) >> {
    SLEEP
    QUIET
    GRAZING
    MOVEMENT
}

' ──────────────────────────────────────────────
' Structs auxiliares
' ──────────────────────────────────────────────
class DeviceUID << (S,LightCyan) struct >> {
    + w0 : uint32_t
    + w1 : uint32_t
    + w2 : uint32_t
}

class Position << (S,LightCyan) struct >> {
    + latitude  : float
    + longitude : float
}

class Acceleration << (S,LightCyan) struct >> {
    + ax : double
    + ay : double
    + az : double
}

class Vertex << (S,LightCyan) struct >> {
    + latitude  : float
    + longitude : float
}

class Line << (S,LightCyan) struct >> {
    + start : Vertex
    + end   : Vertex
}

' ──────────────────────────────────────────────
' Clase Cow
' ──────────────────────────────────────────────
class Cow {
    public:
    Cow()
    Cow(id)
    init() : void
    updatePosition()        : void
    updateAcceleration()    : void
    updateState()           : void
    updateCurrentZone()     : void
    updateDistanceToLimit() : void
    getId()              : DeviceUID
    getPosition()        : Position
    getAcceleration()    : Acceleration
    getState()           : CowState
    getCurrentZone()     : zone_t
    getDistanceToLimit() : float
    getIsInitialized()   : bool
    --
    private:
    id              : DeviceUID
    position        : Position
    acceleration    : Acceleration
    state           : CowState
    currentZone     : zone_t
    distanceToLimit : float
    isInitialized   : bool
}

' ──────────────────────────────────────────────
' Clase Fence
' ──────────────────────────────────────────────
class Fence {
    public:
    thresholds[5] : float
    Fence()
    init()         : void
    createLimits() : void
    getLimits()        : const Line*
    getLimitCount()    : uint8_t
    getCenterFence()   : Vertex
    getIsInitialized() : bool
    getHasValidFence() : bool
    getThreshold()     : float
    --
    private:
    limites[10]   : Line
    limitCount    : uint8_t
    centerFence   : Vertex
    isInitialized : bool
    hasValidFence : bool
    updateCenterFence() : void
    setZoneThresholds() : void
}

' ──────────────────────────────────────────────
' Relaciones
' ──────────────────────────────────────────────
Cow "1" *-- "1" DeviceUID    : tiene >
Cow "1" *-- "1" Position     : tiene >
Cow "1" *-- "1" Acceleration : tiene >
Cow ..> CowState : <<usa>>
Cow ..> zone_t   : <<usa>>

Fence "1" *-- "0..10" Line   : limites >
Line  "1" *-- "2"     Vertex : start/end >
Fence ..> zone_t             : <<usa>>

@enduml
